plugins {
    id 'application'
}

apply plugin: "application"

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

sourceSets {
    mainClassName = 'com.helloscala.Application'
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}

test {
    dependencies {
        testImplementation "com.google.code.gson:gson:2.10.1"
    }
    useJUnitPlatform()
}